changed the aesthetics a little bit more just to align the counters correctly

--- a/style.css
+++ b/style.css
@@ -27,5 +27,6 @@ h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 p{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
 }
